--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "ejs": "^2.5.2",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
